--- a/android/build.gradle
+++ b/android/build.gradle
@@ -41,6 +41,7 @@ android {
   }
   namespace "com.fatih.roguelike"
   compileOptions {
+    encoding "UTF-8"
     sourceCompatibility "1.8"
     targetCompatibility "1.8"
     coreLibraryDesugaringEnabled true
